<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_event_qr_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NewEventQrFragment">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/checkin_screen_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/error_bar"
        android:background="@color/error_red"
        android:text="Error"
        android:textAlignment="center"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/check_in_qr_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="QR code generation for Check-in:"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/checkin_screen_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"  />

    <ImageView
        android:id="@+id/new_event_display_qr_code"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/check_in_qr_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </ImageView>

    <Button
        android:id="@+id/new_event_generate_qr_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Generate a new QR code"
        app:layout_constraintTop_toBottomOf="@id/new_event_display_qr_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        >
    </Button>

    <Button
        android:id="@+id/new_event_upload_qr_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Upload your own QR code"
        app:layout_constraintTop_toBottomOf="@id/new_event_generate_qr_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8">
    </Button>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/qr_screen_finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/arrow_down_float"/>



</androidx.constraintlayout.widget.ConstraintLayout>