...
    <fragment
        android:id="@+id/newEventTextFragment"
        android:name="com.example.qrazyqrsrus.NewEventTextFragment"
        android:label="new_event_text_fragment"
        tools:layout="@layout/new_event_text_fragment" >
        <action
            android:id="@+id/action_newEventTextFragment_to_newEventImageFragment2"
            app:destination="@id/newEventStartTimeFragment" />
        <action
            android:id="@+id/action_newEventTextFragment_to_newEventFragment"
            app:destination="@id/myEventsListFragment" />
    </fragment>
    <fragment
        android:id="@+id/newEventImageFragment"
        android:name="com.example.qrazyqrsrus.NewEventImageFragment"
        android:label="new_event_image_fragment"
...
        android:label="new_event_qr_fragment"
        tools:layout="@layout/new_event_qr_fragment" >
        <argument
            android:name="new_event"
            app:argType="com.example.qrazyqrsrus.Event" />
        <action
            android:id="@+id/action_newEventQrFragment_to_eventList2"
            app:destination="@id/myEventsListFragment" />
        <action
            android:id="@+id/action_newEventQrFragment_to_newEventPromoQrFragment"
            app:destination="@id/newEventPromoQrFragment" />
    </fragment>
    <fragment
...
