<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/cancel_button"
        app:showAsAction="always"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        android:title="Cancel New Event"
        android:orderInCategory="1"/>
</menu>